Fix IE6 spilling over the right side in forums:threads page.

--- a/public/stylesheets/forum.css
+++ b/public/stylesheets/forum.css
@@ -164,6 +164,11 @@
 	float:left;
 }
 
+.FP_replies_per_page .results_per_page {
+	float:left;
+	font-size:inherit;
+}
+
 .FP_reply_container {
 	border-bottom: 2px solid #966C54;
 	margin-bottom:10px;
